1999-07-26  Raph Levien  <raph@gimp.org>

	* art_rgb.c (art_rgb_fill_run): fixed incorrect test for
	big-endianness. Thanks to Michael Zucchi for spotting it.

Fri Jul 16 23:42:59 1999  Tim Janik  <timj@gtk.org>

	* art_affine.c (art_affine_flip): flip translation matrixes as well, by
	inverting matrix[4] if (horz) and inverting matrix[5] if (vert).

Fri Jul 16 23:03:26 1999  Tim Janik  <timj@gtk.org>

	* art_pixbuf.[hc]: deprecated art_pixbuf_free_shallow(), people should
	always free pixbufs with art_pixbuf_free() and use the _dnotify variants
	for specific destruction behaviour.
	added art_pixbuf_new_rgb_dnotify() and art_pixbuf_new_rgba_dnotify()
	which allow for a destruction notification function. (this involved
	adding two extra pointers to the ArtPixBuf structure, and removal of
	the recently introduced int flags field).

Mon Jul 12 01:13:23 1999  Tim Janik  <timj@gtk.org>

	* art_affine.[hc]: added art_affine_equal(), which checks two
	matrixes for equality within grid alignment.

Fri Jul  9 17:50:19 1999  Tim Janik  <timj@gtk.org>

	* art_affine.[hc]: added art_affine_flip() to flip a matrix horizontally
	and/or vertically, or just copy it.
	added art_affine_shear() to setup a shearing matrix.

Tue Jul  6 19:03:39 1999  Tim Janik  <timj@gtk.org>

	* art_pixbuf.h: added an int flags; member to the end of the
	structure, it currently only holds information about whether the
	pixels member should be freed. (raph: i think flags is more generic
	than free_pixels, so we can reuse that field if further demands popup
	in the future).

	* art_pixbuf.c:
	(art_pixbuf_new_const_rgba):
	(art_pixbuf_new_const_rgb): new functions that prevent the pixels
	member from being freed upon art_pixbuf_free ().
	(art_pixbuf_free): only free the pixels member if it is non-NULL and
	the PIXBUF_FLAG_DESTROY_PIXELS is set.

1999-07-02  Raph Levien  <raph@gimp.org>

	* art_vpath_bpath.c (art_vpath_render_bez): Bad bad uninitialized
	variables.
